--- a/Objective-C/Objective-C Demos/SJDemo/Podfile
+++ b/Objective-C/Objective-C Demos/SJDemo/Podfile
@@ -5,6 +5,7 @@ target 'SJDemo' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 pod 'SJNetwork'
+pod 'AFNetworking'
   # Pods for SJDemo
 
   target 'SJDemoTests' do
